force-app/main/default/objects/Error_Log__c/fields/Bill_number__c.field-meta.xml
<CustomField>
    <fullName>Bill_number__c</fullName>
    <label>Bill number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>