force-app/main/default/objects/Error_Log__c/fields/End_Point_URL__c.field-meta.xml
<CustomField>
    <fullName>End_Point_URL__c</fullName>
    <label>End Point URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>