force-app/main/default/objects/Error_Log__c/fields/Record_URL__c.field-meta.xml
<CustomField>
    <fullName>Record_URL__c</fullName>
    <formula>HYPERLINK(&quot;https://icra--uat.lightning.force.com/lightning/r/Error_Log__c/&quot;+Record_ID__c+&quot;/view&quot;, Bill_number__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record URL</label>
    <type>Text</type>
</CustomField>