force-app/main/default/objects/Error_Log__c/fields/Request_Pay_Load__c.field-meta.xml
<CustomField>
    <fullName>Request_Pay_Load__c</fullName>
    <label>Request Pay Load</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>