force-app/main/default/objects/Error_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>Record_URL__c</columns>
    <columns>Bill_number__c</columns>
    <columns>Error_Message__c</columns>
    <columns>End_Point_URL__c</columns>
    <columns>Request_Pay_Load__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>